feat: game ID scaffold
